#+TITLE: Asynchronous HTTP Client - Clojure - Changelog
#+SETUPFILE: setup.org

* Release 1.3.2
** Update dependencies
* Release 1.3.1
** Update dependencies
* Release 1.3.0
** Update documentation
** Update tests
** Update dependencies
** Switch to [[https://github.com/roomkey/lein-v][lein-v]] for version management
* Release 1.2.0
** Update dependencies
*** Update async-http-client to 1.9.39 (fixes issue #74)
** Fix bug when destructuring map (blocker for clojure.spec)
** Add ability to configure read timeout
** Allow request options to be passed for websockets
* Release 1.1.0
** Fix issue #69
** Add support for asynchronous close
* Release 1.0.1
** Fix websocket support
   [[https://github.com/cch1/http.async.client/issues/66][#66]]
* Release 1.0.0
** Update to the latest version of AsyncHttpClient (1.9.31)
*** Remove `remove-params-on-redirect` option
    No longer supported by the underlying AsyncHttpClient library and of dubious value.
*** Remove `async-connect` option
    No longer supported by the underlying AsyncHttpClient library; all connections are performed asynchronously.
*** Overhaul character set handling for multipart functions
*** Use more precise exceptions
*** Move WebSocket implementation to its own namespace
** Use more idiomatic Clojure
** Extract websocket code to separate namespace
** Issue with the AsyncHttpClient Java library.
   See [[https://github.com/AsyncHttpClient/async-http-client/issues/996]] \\
   To workaround, set a realm with
   #+BEGIN_SRC clojure
{:preemptive true :target-proxy true}
   #+END_SRC
* Release 0.6.1
** Allow websocket to take request options :enhancement:
** Add logging to client create/close calls
** Update dependencies, including Clojure
* Release 0.6.0
** Modernize Clojure syntax with `:require` and `:refer` instead of `:use`
** Update com.ning/async-http-client dependency to 1.8.16
*** Handle new options and refactoring of Cookie class with maximum BC