@@ -2,6 +2,7 @@
 #+SETUPFILE: setup.org
 
 * Release 1.3.2
+** Expose config for websocket in `create-client`
 ** Update dependencies
 * Release 1.3.1
 ** Update dependencies
